// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractionEditor render alexa interaction block editor 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(Interaction)
    node={
      Object {
        "color": null,
        "extras": Object {
          "alexa": Object {
            "choices": Array [],
          },
          "google": Object {
            "choices": Array [],
          },
          "type": "interaction",
        },
        "fade": false,
        "height": 50,
        "id": "test",
        "isMoving": false,
        "linter": Array [],
        "listeners": Object {},
        "locked": false,
        "name": "Interaction",
        "type": "default",
        "width": 80,
        "x": 0,
        "y": 0,
      }
    }
    platform="alexa"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": Object {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": null,
        "_currentValue2": null,
        "_threadCount": 0,
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": null,
          "_currentValue2": null,
          "_threadCount": 0,
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`InteractionEditor render google interaction block editor 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Interaction
    node={
      Object {
        "color": null,
        "extras": Object {
          "alexa": Object {
            "choices": Array [],
          },
          "google": Object {
            "choices": Array [],
          },
          "type": "interaction",
        },
        "fade": false,
        "height": 50,
        "id": "test",
        "isMoving": false,
        "linter": Array [],
        "listeners": Object {},
        "locked": false,
        "name": "Interaction",
        "type": "default",
        "width": 80,
        "x": 0,
        "y": 0,
      }
    }
    platform="google"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ButtonGroup
          className="toggle-group mb-2"
          role="group"
          tag="div"
        >
          <Button
            color="secondary"
            disabled={true}
            onClick={[Function]}
            outline={false}
            tag="button"
          >
             Choices 
          </Button>
          <Button
            color="secondary"
            disabled={false}
            onClick={[Function]}
            outline={true}
            tag="button"
          >
             Intents 
          </Button>
          <Button
            color="secondary"
            disabled={false}
            onClick={[Function]}
            outline={true}
            tag="button"
          >
             Slots 
          </Button>
        </ButtonGroup>,
        <div
          className=""
        >
          <React.Fragment>
            <div
              className="d-flex justify-content-between"
            >
              <label>
                Choices
              </label>
              <PlatformTooltip
                field="Interaction choices"
                platform="google"
              />
            </div>
            <ChoiceDropdownInputs
              choices={Array []}
              onAdd={[Function]}
              onChange={[Function]}
              onRemove={[Function]}
              platform="google"
              update={[Function]}
            />
          </React.Fragment>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Button
              color="secondary"
              disabled={true}
              onClick={[Function]}
              outline={false}
              tag="button"
            >
               Choices 
            </Button>,
            <Button
              color="secondary"
              disabled={false}
              onClick={[Function]}
              outline={true}
              tag="button"
            >
               Intents 
            </Button>,
            <Button
              color="secondary"
              disabled={false}
              onClick={[Function]}
              outline={true}
              tag="button"
            >
               Slots 
            </Button>,
          ],
          "className": "toggle-group mb-2",
          "role": "group",
          "tag": "div",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": " Choices ",
              "color": "secondary",
              "disabled": true,
              "onClick": [Function],
              "outline": false,
              "tag": "button",
            },
            "ref": null,
            "rendered": " Choices ",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": " Intents ",
              "color": "secondary",
              "disabled": false,
              "onClick": [Function],
              "outline": true,
              "tag": "button",
            },
            "ref": null,
            "rendered": " Intents ",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": " Slots ",
              "color": "secondary",
              "disabled": false,
              "onClick": [Function],
              "outline": true,
              "tag": "button",
            },
            "ref": null,
            "rendered": " Slots ",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <React.Fragment>
            <div
              className="d-flex justify-content-between"
            >
              <label>
                Choices
              </label>
              <PlatformTooltip
                field="Interaction choices"
                platform="google"
              />
            </div>
            <ChoiceDropdownInputs
              choices={Array []}
              onAdd={[Function]}
              onChange={[Function]}
              onRemove={[Function]}
              platform="google"
              update={[Function]}
            />
          </React.Fragment>,
          "className": "",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <div
                className="d-flex justify-content-between"
              >
                <label>
                  Choices
                </label>
                <PlatformTooltip
                  field="Interaction choices"
                  platform="google"
                />
              </div>,
              <ChoiceDropdownInputs
                choices={Array []}
                onAdd={[Function]}
                onChange={[Function]}
                onRemove={[Function]}
                platform="google"
                update={[Function]}
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label>
                    Choices
                  </label>,
                  <PlatformTooltip
                    field="Interaction choices"
                    platform="google"
                  />,
                ],
                "className": "d-flex justify-content-between",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Choices",
                  },
                  "ref": null,
                  "rendered": "Choices",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "field": "Interaction choices",
                    "platform": "google",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "built_ins": undefined,
                "choices": Array [],
                "intents": undefined,
                "live_mode": undefined,
                "onAdd": [Function],
                "onChange": [Function],
                "onError": undefined,
                "onRemove": [Function],
                "platform": "google",
                "slots": undefined,
                "update": [Function],
                "variables": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": Symbol(react.fragment),
        },
        "type": "div",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ButtonGroup
            className="toggle-group mb-2"
            role="group"
            tag="div"
          >
            <Button
              color="secondary"
              disabled={true}
              onClick={[Function]}
              outline={false}
              tag="button"
            >
               Choices 
            </Button>
            <Button
              color="secondary"
              disabled={false}
              onClick={[Function]}
              outline={true}
              tag="button"
            >
               Intents 
            </Button>
            <Button
              color="secondary"
              disabled={false}
              onClick={[Function]}
              outline={true}
              tag="button"
            >
               Slots 
            </Button>
          </ButtonGroup>,
          <div
            className=""
          >
            <React.Fragment>
              <div
                className="d-flex justify-content-between"
              >
                <label>
                  Choices
                </label>
                <PlatformTooltip
                  field="Interaction choices"
                  platform="google"
                />
              </div>
              <ChoiceDropdownInputs
                choices={Array []}
                onAdd={[Function]}
                onChange={[Function]}
                onRemove={[Function]}
                platform="google"
                update={[Function]}
              />
            </React.Fragment>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Button
                color="secondary"
                disabled={true}
                onClick={[Function]}
                outline={false}
                tag="button"
              >
                 Choices 
              </Button>,
              <Button
                color="secondary"
                disabled={false}
                onClick={[Function]}
                outline={true}
                tag="button"
              >
                 Intents 
              </Button>,
              <Button
                color="secondary"
                disabled={false}
                onClick={[Function]}
                outline={true}
                tag="button"
              >
                 Slots 
              </Button>,
            ],
            "className": "toggle-group mb-2",
            "role": "group",
            "tag": "div",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": " Choices ",
                "color": "secondary",
                "disabled": true,
                "onClick": [Function],
                "outline": false,
                "tag": "button",
              },
              "ref": null,
              "rendered": " Choices ",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": " Intents ",
                "color": "secondary",
                "disabled": false,
                "onClick": [Function],
                "outline": true,
                "tag": "button",
              },
              "ref": null,
              "rendered": " Intents ",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": " Slots ",
                "color": "secondary",
                "disabled": false,
                "onClick": [Function],
                "outline": true,
                "tag": "button",
              },
              "ref": null,
              "rendered": " Slots ",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <React.Fragment>
              <div
                className="d-flex justify-content-between"
              >
                <label>
                  Choices
                </label>
                <PlatformTooltip
                  field="Interaction choices"
                  platform="google"
                />
              </div>
              <ChoiceDropdownInputs
                choices={Array []}
                onAdd={[Function]}
                onChange={[Function]}
                onRemove={[Function]}
                platform="google"
                update={[Function]}
              />
            </React.Fragment>,
            "className": "",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <div
                  className="d-flex justify-content-between"
                >
                  <label>
                    Choices
                  </label>
                  <PlatformTooltip
                    field="Interaction choices"
                    platform="google"
                  />
                </div>,
                <ChoiceDropdownInputs
                  choices={Array []}
                  onAdd={[Function]}
                  onChange={[Function]}
                  onRemove={[Function]}
                  platform="google"
                  update={[Function]}
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label>
                      Choices
                    </label>,
                    <PlatformTooltip
                      field="Interaction choices"
                      platform="google"
                    />,
                  ],
                  "className": "d-flex justify-content-between",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Choices",
                    },
                    "ref": null,
                    "rendered": "Choices",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "field": "Interaction choices",
                      "platform": "google",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "built_ins": undefined,
                  "choices": Array [],
                  "intents": undefined,
                  "live_mode": undefined,
                  "onAdd": [Function],
                  "onChange": [Function],
                  "onError": undefined,
                  "onRemove": [Function],
                  "platform": "google",
                  "slots": undefined,
                  "update": [Function],
                  "variables": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": Symbol(react.fragment),
          },
          "type": "div",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
